--- a/index.html
+++ b/index.html
@@ -316,7 +316,8 @@
         <div class="col-lg-9 align-self-center">
           <div class="row">
             <div class="col-lg-12">
-              <form id="contact" action="" method="post">
+              <form name="contact" id="contact" action="" method="post" data-netlify="true">
+                <input type="hidden" name="contact" value="contact">
                 <div class="row">
                   <div class="col-lg-12">
                     <h2>Get in touch With a Technician</h2>
