--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <section class="available-services" id="services">
     <div class="container">
-      <div class="row">
+      <div class="row cards">
         <div class="col-lg-12">
           <div class="section-heading">
             <h2>Available Service / current prices</h2>
@@ -194,7 +194,7 @@
           </div>
         </div>
         <div class="col-lg-8">
-          <div class="row">
+          <div class="row cards">
             <div class="col-lg-6">
               <div class="services-item">
                 <div class="thumb">
@@ -205,7 +205,7 @@
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Plumber</h4></a>
-                  <p>Fix your plumbing issues and sinks<br>ON THE SPOT.</p>
+                  <p class="card-text">Fix your plumbing issues and sinks<br>ON THE SPOT.</p>
                 </div>
               </div>
             </div>
@@ -219,7 +219,7 @@
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Electrician</h4></a>
-                  <p>Fix all of your Electrical problems<br> You can find all the solutions here.</p>
+                  <p class="card-text">Fix all of your Electrical problems<br> You can find all the solutions here.</p>
                 </div>
               </div>
             </div>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Other Jobs</h4></a>
-                  <p>With TFI , we can find the solution to all of your <br>problems starting from $10/hr.</p>
+                  <p class="card-text">With TFI , we can find the solution to all of your <br>problems starting from $10/hr.</p>
                 </div>
               </div>
             </div>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="down-content">
                   <a href="meeting-details.html"><h4>Painting  professional</h4></a>
-                  <p>Paint your whole house in the shortest time frame<br>We are here for you.</p>
+                  <p class="card-text">Paint your whole house in the shortest time frame<br>We are here for you.</p>
                 </div>
               </div>
             </div>
