--- a/meetings.html
+++ b/meetings.html
@@ -64,7 +64,6 @@
                       <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="meetings.html" class="active">Services</a></li>
-                        <li><a href="index.html">Fix It</a></li>
                         <li class="has-sub">
                             <a href="javascript:void(0)">Pages</a>
                             <ul class="sub-menu">
@@ -95,12 +94,12 @@
       </div>
     </div>
   </section>
-
-  <section class="meetings-page" id="meetings">
+<!--
+  <section class="meetings-page cards" id="meetings">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <div class="row">
+          <div class="row ">
             <div class="col-lg-12">
               <div class="filters">
                 <ul>
@@ -112,9 +111,9 @@
               </div>
             </div>
             <div class="col-lg-12">
-              <div class="row grid">
+              <div class="row grid ">
                 <div class="col-lg-4 services-item-col all soon">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$14.00</span>
@@ -128,7 +127,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all imp">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$22.00</span>
@@ -142,7 +141,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all soon">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$24.00</span>
@@ -156,7 +155,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all att">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$32.00</span>
@@ -170,7 +169,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all att">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$34.00</span>
@@ -184,7 +183,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all imp">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$45.00</span>
@@ -198,7 +197,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all imp att">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$52.00</span>
@@ -212,7 +211,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all soon imp">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$64.00</span>
@@ -226,7 +225,7 @@
                   </div>
                 </div>
                 <div class="col-lg-4 services-item-col all att soon">
-                  <div class="meeting-item">
+                  <div class="meeting-item card">
                     <div class="thumb">
                       <div class="price">
                         <span>$74.00</span>
@@ -256,12 +255,96 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <p>Created by <span class="copyright">Aladdin Ibrahim</span>. © 2023 | All Rights Reserved </p>
-    </div>
+    
   </section>
-
-
+-->
+<section class="upcoming-services-page">
+    <div class="filters">
+      <ul>
+        <li data-filter="*" class="active">All services</li>
+        <li data-filter=".soon">Soon</li>
+        <li data-filter=".imp, .att.imp">Best</li>
+        <li data-filter=".att">Attractive</li>
+      </ul>
+    </div>
+  <div id="card-grid" class=" card-grid"> 
+  <div class="card all imp">
+    <img src="./assets/images/plumbing.jpg" alt="Card 1">
+    <div class="card-content">
+      <h3>Card 1 Title</h3>
+      <p>Card 1 Description</p>
+      <div class="price-tag">$10</div>
+    </div>
+  </div>
+  <div class="card all soon">
+    <img src="./assets/images/painting.jpg" alt="Card 2">
+    <div class="card-content">
+      <h3>Card 2 Title</h3>
+      <p>Card 2 Description</p>
+      <div class="price-tag">$20</div>
+    </div>
+  </div>
+  <div class="card all soon">
+    <img src="./assets/images/other.jpg" alt="Card 3">
+    <div class="card-content">
+      <h3>Card 3 Title</h3>
+      <p>Card 3 Description</p>
+      <div class="price-tag">$30</div>
+    </div>
+  </div>
+  <div class="card all att soon">
+    <img src="/assets/images/other.jpg" alt="Card 4">
+    <div class="card-content">
+      <h3>Card 4 Title</h3>
+      <p>Card 4 Description</p>
+      <div class="price-tag">$40</div>
+    </div>
+  </div>
+  <div class="card all imp">
+    <img src="/assets/images/other.jpg" alt="Card 5">
+    <div class="card-content">
+      <h3>Card 5 Title</h3>
+      <p>Card 5 Description</p>
+      <div class="price-tag">$50</div>
+    </div>
+  </div>
+  <div class="card all att soon imp">
+    <img src="/assets/images/other.jpg" alt="Card 6">
+    <div class="card-content">
+      <h3>Card 6 Title</h3>
+      <p>Card 6 Description</p>
+      <div class="price-tag">$60</div>
+    </div>
+  </div>
+  <div class="card all att soon">
+    <img src="/assets/images/other.jpg" alt="Card 7">
+    <div class="card-content">
+      <h3>Card 7 Title</h3>
+      <p>Card 7 Description</p>
+      <div class="price-tag">$70</div>
+    </div>
+  </div>
+  <div class="card all att imp">
+    <img src="/assets/images/other.jpg" alt="Card 8">
+    <div class="card-content">
+      <h3>Card 8 Title</h3>
+      <p>Card 8 Description</p>
+      <div class="price-tag">$80</div>
+    </div>
+  </div>
+  <div class="card all">
+    <img src="/assets/images/other.jpg" alt="Card 9">
+    <div class="card-content">
+      <h3>Card 9 Title</h3>
+      <p>Card 9 Description</p>
+      <div class="price-tag">$90</div>
+    </div>
+  </div>
+</div>
+  <div class="footer">
+    <p>Created by <span class="copyright">TFI</span>. © 2023 | All Rights Reserved </p>
+  </div>
+</section>
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
@@ -271,59 +354,10 @@
     <script src="assets/js/owl-carousel.js"></script>
     <script src="assets/js/lightbox.js"></script>
     <script src="assets/js/tabs.js"></script>
-    <script src="assets/js/isotope.js"></script>
     <script src="assets/js/video.js"></script>
     <script src="assets/js/slick-slider.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script>
-        //according to loftblog tut
-        $('.nav li:first').addClass('active');
-
-        var showSection = function showSection(section, isAnimate) {
-          var
-          direction = section.replace(/#/, ''),
-          reqSection = $('.section').filter('[data-section="' + direction + '"]'),
-          reqSectionPos = reqSection.offset().top - 0;
-
-          if (isAnimate) {
-            $('body, html').animate({
-              scrollTop: reqSectionPos },
-            800);
-          } else {
-            $('body, html').scrollTop(reqSectionPos);
-          }
-
-        };
-
-        var checkSection = function checkSection() {
-          $('.section').each(function () {
-            var
-            $this = $(this),
-            topEdge = $this.offset().top - 80,
-            bottomEdge = topEdge + $this.height(),
-            wScroll = $(window).scrollTop();
-            if (topEdge < wScroll && bottomEdge > wScroll) {
-              var
-              currentId = $this.data('section'),
-              reqLink = $('a').filter('[href*=\\#' + currentId + ']');
-              reqLink.closest('li').addClass('active').
-              siblings().removeClass('active');
-            }
-          });
-        };
-
-        $('.main-menu, .responsive-menu, .scroll-to-section').on('click', 'a', function (e) {
-          e.preventDefault();
-          showSection($(this).attr('href'), true);
-        });
-
-        $(window).scroll(function () {
-          checkSection();
-        });
-    </script>
+    
 </body>
-
-
-  </body>
 
 </html>
